resolved gallery arrow visibility ticket 1816

--- a/docroot/sites/akdn/themes/akdn/sass/_akdn-redesign.scss
+++ b/docroot/sites/akdn/themes/akdn/sass/_akdn-redesign.scss
@@ -6005,6 +6005,10 @@ map {
           display: none;
         }
       }
+      @media only screen and (max-width: 479px){
+      visibility: hidden;
+      height: 0;
+      }
     }
   }
 
